--- a/package.json
+++ b/package.json
@@ -73,13 +73,13 @@
     "grunt-sass": "^3.1.0",
     "grunt-stylelint": "^0.15.0",
     "jquery": "^3.5.1",
-    "karma": "^5.0.9",
+    "karma": "5.0.8",
     "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "^2.0.0",
     "karma-detect-browsers": "^2.3.3",
     "karma-firefox-launcher": "^1.3.0",
     "karma-qunit": "^4.1.1",
-    "karma-sauce-launcher": "^4.1.5",
+    "karma-sauce-launcher": "4.1.4",
     "linkinator": "^2.1.1",
     "load-grunt-tasks": "^5.1.0",
     "markdown-it": "^11.0.0",
