--- a/package.json
+++ b/package.json
@@ -50,16 +50,16 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
     "@lodder/grunt-postcss": "^2.0.4",
-    "autoprefixer": "^9.8.4",
+    "autoprefixer": "^9.8.5",
     "cross-env": "^7.0.2",
     "eleventy-plugin-nesting-toc": "^1.2.0",
-    "eslint": "^7.3.1",
+    "eslint": "^7.4.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-figuration": "file:./build/eslint-plugin-figuration",
     "eslint-plugin-node": "^11.1.0",
     "find-unused-sass-variables": "^2.0.0",
     "glob": "^7.1.6",
-    "grunt": "^1.0.4",
+    "grunt": "^1.2.1",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
@@ -73,7 +73,7 @@
     "grunt-sass": "^3.1.0",
     "grunt-stylelint": "^0.15.0",
     "jquery": "^3.5.1",
-    "karma": "5.0.8",
+    "karma": "^5.1.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "^2.0.0",
     "karma-detect-browsers": "^2.3.3",
@@ -91,7 +91,7 @@
     "postcss-calc": "^7.0.2",
     "postcss-flexbugs-fixes": "^4.2.1",
     "prismjs": "^1.20.0",
-    "qunit": "^2.10.0",
+    "qunit": "^2.10.1",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "slugify": "^1.4.4",
