--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "figuration",
   "description": "A feature rich, responsive, mobile first, accessible, front-end framework.",
-  "version": "4.0.0-beta.5",
+  "version": "4.0.0",
   "versionShort": "4.0",
   "keywords": [
     "css",
