--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
-    "@lodder/grunt-postcss": "^2.0.4",
-    "autoprefixer": "^9.8.6",
+    "@lodder/grunt-postcss": "^3.0.0",
+    "autoprefixer": "^10.0.0",
     "cross-env": "^7.0.2",
     "eleventy-plugin-nesting-toc": "^1.2.0",
     "eslint": "^7.9.0",
@@ -73,7 +73,7 @@
     "grunt-sass": "^3.1.0",
     "grunt-stylelint": "^0.15.0",
     "jquery": "^3.5.1",
-    "karma": "^5.2.2",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "^2.0.0",
     "karma-detect-browsers": "^2.3.3",
@@ -88,6 +88,7 @@
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "popper.js": "^1.16.1",
+    "postcss": "^8.0.9",
     "postcss-calc": "^7.0.4",
     "postcss-flexbugs-fixes": "^4.2.1",
     "prismjs": "^1.21.0",
@@ -95,7 +96,7 @@
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "slugify": "^1.4.5",
-    "stylelint": "13.6.1",
+    "stylelint": "^13.7.2",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
