Stylelint: Ensure consistent use of border and outline resets

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -24,6 +24,10 @@
     "declaration-block-semicolon-space-after": "always-single-line",
     "declaration-empty-line-before": null,
     "declaration-no-important": true,
+    "declaration-property-value-disallowed-list": {
+      "border": "none",
+      "outline": "none"
+    },
     "font-family-name-quotes": "always-where-recommended",
     "font-weight-notation": [
       "numeric", {
