--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "linkinator": "linkinator _siteout --recurse --silent --skip \"^(?!http://localhost)\"",
     "js-test-karma": "karma start build/karma.conf.js",
     "js-test-debug": "cross-env DEBUG=true npm run js-test-karma",
-    "js-test-cloud": "cross-env BROWSER=true npm run js-test-karma"
+    "js-test-cloud": "cross-env SAUCE=true npm run js-test-karma"
   },
   "style": "dist/css/figuration.css",
   "sass": "scss/figuration.scss",
@@ -50,10 +50,10 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
     "@lodder/grunt-postcss": "^3.0.0",
-    "autoprefixer": "^10.2.1",
+    "autoprefixer": "^10.2.4",
     "cross-env": "^7.0.3",
     "eleventy-plugin-nesting-toc": "^1.2.0",
-    "eslint": "^7.17.0",
+    "eslint": "^7.19.0",
     "eslint-plugin-compat": "^3.9.0",
     "eslint-plugin-figuration": "file:./build/eslint-plugin-figuration",
     "eslint-plugin-node": "^11.1.0",
@@ -67,28 +67,28 @@
     "grunt-contrib-uglify": "^5.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-eslint": "^23.0.0",
-    "grunt-html": "^14.2.1",
+    "grunt-html": "^14.3.0",
     "grunt-rtlcss": "^2.0.2",
     "grunt-run": "^0.8.1",
     "grunt-sass": "^3.1.0",
     "grunt-stylelint": "^0.16.0",
     "jquery": "^3.5.1",
-    "karma": "^6.0.0",
+    "karma": "^6.1.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "^2.0.0",
     "karma-detect-browsers": "^2.3.3",
     "karma-firefox-launcher": "^2.1.0",
-    "karma-qunit": "^4.1.1",
+    "karma-qunit": "^4.1.2",
     "karma-sauce-launcher": "4.1.4",
-    "linkinator": "^2.13.1",
+    "linkinator": "^2.13.3",
     "load-grunt-tasks": "^5.1.0",
     "markdown-it": "^12.0.4",
-    "markdown-it-anchor": "^7.0.0",
+    "markdown-it-anchor": "^7.0.2",
     "markdown-it-attrs": "^4.0.0",
     "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "popper.js": "^1.16.1",
-    "postcss": "^8.2.4",
+    "postcss": "^8.2.5",
     "postcss-calc": "^8.0.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "prismjs": "^1.23.0",
@@ -96,7 +96,7 @@
     "shelljs": "^0.8.4",
     "shx": "^0.3.3",
     "slugify": "^1.4.6",
-    "stylelint": "^13.8.0",
+    "stylelint": "^13.9.0",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
