--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "grunt-run": "^0.8.1",
     "grunt-sass": "^3.1.0",
     "grunt-stylelint": "^0.16.0",
+    "ip": "^1.1.5",
     "jquery": "^3.5.1",
     "karma": "^6.3.4",
     "karma-chrome-launcher": "^3.1.0",
@@ -79,7 +80,7 @@
     "karma-detect-browsers": "^2.3.3",
     "karma-firefox-launcher": "^2.1.1",
     "karma-qunit": "^4.1.2",
-    "karma-sauce-launcher": "4.1.4",
+    "karma-sauce-launcher": "^4.3.6",
     "linkinator": "^2.14.0",
     "load-grunt-tasks": "^5.1.0",
     "markdown-it": "^12.2.0",
