--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "figuration",
   "description": "A feature rich, responsive, mobile first, accessible, front-end framework.",
   "version": "4.2.0",
-  "versionShort": "4.2",
+  "config": {
+    "versionShort": "4.2"
+  },
   "keywords": [
     "css",
     "sass",
@@ -17,13 +19,16 @@
   "author": "CAST, Inc.",
   "scripts": {
     "test": "grunt test",
+    "css-lint-stylelint": "npm-run-all --continue-on-error --parallel css-lint-stylelint-*",
+    "css-lint-stylelint-core": "stylelint \"scss/**/*.scss\" --cache --cache-location .cache/.stylelintcache-core --rd",
+    "css-lint-stylelint-docs": "cross-env-shell SCSS_PATH=\\\"./site/assets/$npm_package_config_versionShort/scss/*.scss\\\" \"stylelint $SCSS_PATH --cache --cache-location .cache/.stylelintcache-docs --rd\"",
     "css-lint-vars": "npm-run-all --continue-on-error --parallel css-lint-vars-*",
     "css-lint-vars-core": "fusv scss/",
-    "css-lint-vars-docs": "cross-env-shell \"fusv site/assets/$npm_package_versionShort/scss/\"",
+    "css-lint-vars-docs": "cross-env-shell \"fusv site/assets/$npm_package_config_versionShort/scss/\"",
     "docs-build": "npm run docs-serve-clean && npm run docs-serve-copy && eleventy --quiet",
     "docs-serve": "npm-run-all --parallel docs-serve-*",
     "docs-serve-clean": "rimraf _siteout",
-    "docs-serve-copy": "cross-env-shell \"shx rm -rf site/assets/$npm_package_versionShort/dist/ && shx cp -r dist/ site/assets/$npm_package_versionShort/\"",
+    "docs-serve-copy": "cross-env-shell \"shx rm -rf site/assets/$npm_package_config_versionShort/dist/ && shx cp -r dist/ site/assets/$npm_package_config_versionShort/\"",
     "docs-serve-11ty": "eleventy --serve --port=9001",
     "docs-prod": "npm run docs-serve-clean && cross-env ELEVENTY_ENV=production eleventy",
     "docs-prod-serve": "npm run docs-serve-clean && cross-env ELEVENTY_ENV=production eleventy --serve",
