--- a/package.json
+++ b/package.json
@@ -19,14 +19,21 @@
   "author": "CAST, Inc.",
   "scripts": {
     "test": "grunt test",
-    "css-lint-stylelint": "npm-run-all --continue-on-error --parallel css-lint-stylelint-*",
+    "css": "npm-run-all css-build css-lint",
+    "css-dist": "npm-run-all css-compile css-prefix css-rtl",
+    "css-lint": "npm-run-all --aggregate-output --continue-on-error --parallel css-lint-stylelint css-lint-vars",
+    "css-lint-stylelint": "npm-run-all --aggregate-output --continue-on-error --parallel css-lint-stylelint-*",
     "css-lint-stylelint-core": "stylelint \"scss/**/*.scss\" --cache --cache-location .cache/.stylelintcache-core --rd",
     "css-lint-stylelint-docs": "cross-env-shell SCSS_PATH=\\\"./site/assets/$npm_package_config_versionShort/scss/*.scss\\\" \"stylelint $SCSS_PATH --cache --cache-location .cache/.stylelintcache-docs --rd\"",
-    "css-lint-vars": "npm-run-all --continue-on-error --parallel css-lint-vars-*",
+    "css-lint-vars": "npm-run-all --aggregate-output --continue-on-error --parallel css-lint-vars-*",
     "css-lint-vars-core": "fusv scss/",
     "css-lint-vars-docs": "cross-env-shell \"fusv site/assets/$npm_package_config_versionShort/scss/\"",
+    "css-compile": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 scss/ -o dist/css/",
+    "css-prefix": "npm-run-all --aggregate-output --parallel css-prefix-*",
+    "css-prefix-main": "postcss --config build/postcss.config.js --replace \"dist/css/*.css\" \"!dist/css/*-rtl*.css\" \"!dist/css/*.min.css\"",
+    "css-rtl": "cross-env NODE_ENV=RTL postcss --config build/postcss.config.js --dir \"dist/css\" --ext \"-rtl.css\" \"dist/css/*.css\" \"!dist/css/*.min.css\" \"!dist/css/*-rtl.css\"",
     "docs-build": "npm run docs-serve-clean && npm run docs-serve-copy && eleventy --quiet",
-    "docs-serve": "npm-run-all --parallel docs-serve-*",
+    "docs-serve": "npm-run-all docs-serve-*",
     "docs-serve-clean": "rimraf _siteout",
     "docs-serve-copy": "cross-env-shell \"shx rm -rf site/assets/$npm_package_config_versionShort/dist/ && shx cp -r dist/ site/assets/$npm_package_config_versionShort/\"",
     "docs-serve-11ty": "eleventy --serve --port=9001",
@@ -67,7 +74,6 @@
     "grunt": "^1.4.1",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^4.0.0",
     "grunt-contrib-uglify": "^5.0.1",
     "grunt-contrib-watch": "^1.1.0",
@@ -96,6 +102,7 @@
     "popper.js": "^1.16.1",
     "postcss": "^8.3.6",
     "postcss-calc": "^8.0.0",
+    "postcss-cli": "^8.3.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "prismjs": "^1.24.1",
     "qunit": "^2.16.0",
