--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "framework",
     "web"
   ],
-  "homepage": "http://figuration.org",
+  "homepage": "https://figuration.org",
   "author": "CAST, Inc.",
   "scripts": {
     "test": "grunt test",
