--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "css-lint": "npm-run-all --aggregate-output --continue-on-error --parallel css-lint-stylelint css-lint-vars",
     "css-lint-stylelint": "npm-run-all --aggregate-output --continue-on-error --parallel css-lint-stylelint-*",
     "css-lint-stylelint-core": "stylelint \"scss/**/*.scss\" --cache --cache-location .cache/.stylelintcache-core --rd",
-    "css-lint-stylelint-docs": "cross-env-shell SCSS_PATH=\\\"./site/assets/$npm_package_config_versionShort/scss/*.scss\\\" \"stylelint $SCSS_PATH --cache --cache-location .cache/.stylelintcache-docs --rd\"",
+    "css-lint-stylelint-docs": "cross-env-shell stylelint \"site/assets/$npm_package_config_versionShort/scss/*.scss\" --cache --cache-location .cache/.stylelintcache-docs --rd",
     "css-lint-vars": "npm-run-all --aggregate-output --continue-on-error --parallel css-lint-vars-*",
     "css-lint-vars-core": "fusv scss/",
     "css-lint-vars-docs": "cross-env-shell \"fusv site/assets/$npm_package_config_versionShort/scss/\"",
     "css-compile": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 scss/ -o dist/css/",
     "css-prefix": "npm-run-all --aggregate-output --parallel css-prefix-*",
-    "css-prefix-main": "postcss --config build/postcss.config.js --replace \"dist/css/*.css\" \"!dist/css/*-rtl*.css\" \"!dist/css/*.min.css\"",
-    "css-rtl": "cross-env NODE_ENV=RTL postcss --config build/postcss.config.js --dir \"dist/css\" --ext \"-rtl.css\" \"dist/css/*.css\" \"!dist/css/*.min.css\" \"!dist/css/*-rtl.css\"",
+    "css-prefix-main": "postcss --config build/postcss.config.js --replace \"dist/css/*.css\" \"!dist/css/*.rtl*.css\" \"!dist/css/*.min.css\"",
+    "css-rtl": "npm-run-all --aggregate-output --continue-on-error --parallel css-rtl-*",
+    "css-rtl-core": "cross-env NODE_ENV=RTL postcss --config build/postcss.config.js --dir \"dist/css\" --ext \".rtl.css\" \"dist/css/*.css\" \"!dist/css/*.min.css\" \"!dist/css/*.rtl.css\"",
+    "css-rtl-docs": "cross-env NODE_ENV=RTL PATH_IN=\\\"site/assets/$npm_package_config_versionShort/css/*.css !site/assets/$npm_package_config_versionShort/css/*.min.css !site/assets/$npm_package_config_versionShort/css/*.rtl.css\\\" \"postcss --config build/postcss.config.js --dir \\\"site/assets/$npm_package_config_versionShort/css\\\" --ext \\\".rtl.css\\\" $PATH_IN",
     "docs-build": "npm run docs-serve-clean && npm run docs-serve-copy && eleventy --quiet",
     "docs-serve": "npm-run-all docs-serve-*",
     "docs-serve-clean": "rimraf _siteout",
