Use GitHub SHA in Sauce Labs build ID

--- a/.github/workflows/saucelabs.yml
+++ b/.github/workflows/saucelabs.yml
@@ -31,3 +31,4 @@ jobs:
         env:
           SAUCE_ACCESS_KEY: "${{ secrets.SAUCE_ACCESS_KEY }}"
           SAUCE_USERNAME: "${{ secrets.SAUCE_USERNAME }}"
+          GITHUB_SHA: "${{ github.sha }}"
