--- a/.stylelintrc
+++ b/.stylelintrc
@@ -18,6 +18,7 @@
     "block-closing-brace-newline-after": null,
     "block-opening-brace-space-before": null,
     "color-named": "never",
+    'custom-property-pattern': null,
     "declaration-block-no-duplicate-properties": true,
     "declaration-block-semicolon-newline-after": "always-multi-line",
     "declaration-block-semicolon-newline-before": "never-multi-line",
@@ -276,22 +277,27 @@
     ],
     "property-no-vendor-prefix": true,
     "rule-empty-line-before": null,
+    'scss/at-extend-no-missing-placeholder': null,
     "scss/at-function-parentheses-space-before": "never",
+    'scss/at-if-no-null': null,
     "scss/at-import-no-partial-leading-underscore": true,
     "scss/at-mixin-argumentless-call-parentheses": "always",
     "scss/at-mixin-named-arguments": null,
     "scss/at-mixin-parentheses-space-before": "never",
     "scss/at-rule-no-unknown": true,
+    'scss/comment-no-empty': null,
     "scss/dollar-variable-colon-space-after": "at-least-one-space",
     "scss/dollar-variable-colon-space-before": "never",
     "scss/dollar-variable-default": [ true, {
         "ignore": "local"
     }],
     "scss/dollar-variable-no-missing-interpolation": true,
+    'scss/function-quote-no-quoted-strings-inside': null,
     "scss/media-feature-value-dollar-variable": null,
     "scss/no-duplicate-dollar-variables": [ null, {
         "ignoreInsideAtRules": [ "if", "mixin" ]
     }],
+    'scss/no-global-function-names': null,
     "scss/operator-no-newline-after": true,
     "scss/operator-no-newline-before": true,
     "scss/operator-no-unspaced": true,
