--- a/.stylelintrc
+++ b/.stylelintrc
@@ -7,6 +7,7 @@
     "stylelint-order"
   ],
   "rules": {
+    'alpha-value-notation': null,
     "at-rule-empty-line-before": [null, {
       "except": ["first-nested"]
     }],
@@ -17,6 +18,7 @@
     "block-closing-brace-empty-line-before": null,
     "block-closing-brace-newline-after": null,
     "block-opening-brace-space-before": null,
+    'color-function-notation': null,
     "color-named": "never",
     'custom-property-pattern': null,
     "declaration-block-no-duplicate-properties": true,
