--- a/.github/workflows/dart-sass.yml
+++ b/.github/workflows/dart-sass.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Install npm dependencies
         run: npm ci
+
+      - name: Install Dart Sass dependency
         run: npm install sass@latest
 
       - name: CSS Lint
