Add dependabot and update Actions

--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -9,25 +9,20 @@ on:
 
 env:
   FORCE_COLOR: 2
+  NODE: 16
 
 jobs:
   js:
-    name: JS - Node ${{ matrix.node }}
     runs-on: ubuntu-latest
-
-    strategy:
-      fail-fast: false
-      matrix:
-        node: [12, 14, 16]
 
     steps:
       - name: Clone repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node }}
+          node-version: ${{ env.NODE }}
           cache: npm
 
       - name: Install npm dependencies
