--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "grunt test",
     "css-lint-vars": "npm-run-all --continue-on-error --parallel css-lint-vars-*",
     "css-lint-vars-core": "fusv scss/",
-    "css-lint-vars-docs": "cross-env-shell \"fusv site/assets/$npm_package_version_short/scss/\"",
+    "css-lint-vars-docs": "fusv site/assets/",
     "docs-build": "npm run docs-serve-clean && npm run docs-serve-copy && eleventy --quiet",
     "docs-serve": "npm-run-all --parallel docs-serve-*",
     "docs-serve-clean": "rimraf _siteout",
@@ -50,20 +50,20 @@
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
     "@lodder/grunt-postcss": "^3.1.1",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.4",
     "cross-env": "^7.0.3",
     "eleventy-plugin-nesting-toc": "^1.3.0",
-    "eslint": "^8.9.0",
+    "eslint": "^8.12.0",
     "eslint-plugin-compat": "^4.0.2",
     "eslint-plugin-figuration": "file:./build/eslint-plugin-figuration",
     "eslint-plugin-node": "^11.1.0",
-    "find-unused-sass-variables": "^4.0.1",
+    "find-unused-sass-variables": "^4.0.3",
     "glob": "^7.2.0",
     "grunt": "^1.4.1",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^2.0.0",
     "grunt-contrib-cssmin": "^4.0.0",
-    "grunt-contrib-uglify": "^5.0.1",
+    "grunt-contrib-uglify": "^5.1.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-eslint": "^24.0.0",
     "grunt-html": "^15.2.2",
@@ -73,8 +73,8 @@
     "grunt-stylelint": "^0.17.0",
     "ip": "^1.1.5",
     "jquery": "^3.5.1",
-    "karma": "^6.3.16",
-    "karma-chrome-launcher": "^3.1.0",
+    "karma": "^6.3.17",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-cli": "^2.0.0",
     "karma-detect-browsers": "^2.3.3",
     "karma-firefox-launcher": "^2.1.2",
@@ -88,7 +88,7 @@
     "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "popper.js": "^1.16.1",
-    "postcss": "^8.4.6",
+    "postcss": "^8.4.12",
     "postcss-calc": "^8.2.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "prismjs": "^1.27.0",
@@ -96,11 +96,11 @@
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
     "slugify": "^1.6.5",
-    "stylelint": "^14.5.3",
-    "stylelint-config-recommended-scss": "^5.0.2",
+    "stylelint": "^14.6.1",
+    "stylelint-config-recommended-scss": "^6.0.0",
     "stylelint-config-standard": "^25.0.0",
     "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.1.0",
+    "stylelint-scss": "^4.2.0",
     "time-grunt": "^2.0.0"
   },
   "files": [
