--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
     "eleventy-plugin-nesting-toc": "^1.3.0",
     "eslint": "^8.12.0",
     "eslint-plugin-compat": "^4.0.2",
-    "eslint-plugin-figuration": "file:./build/eslint-plugin-figuration",
+    "eslint-plugin-figuration": "file:build/eslint-plugin-figuration",
     "eslint-plugin-node": "^11.1.0",
-    "find-unused-sass-variables": "^4.0.3",
+    "find-unused-sass-variables": "^4.0.4",
     "glob": "^7.2.0",
     "grunt": "^1.4.1",
     "grunt-contrib-clean": "^2.0.0",
@@ -74,7 +74,7 @@
     "grunt-sass": "^3.1.0",
     "grunt-stylelint": "^0.18.0",
     "ip": "^1.1.5",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "karma": "^6.3.17",
     "karma-chrome-launcher": "^3.1.1",
     "karma-cli": "^2.0.0",
