--- a/.stylelintrc
+++ b/.stylelintrc
@@ -322,6 +322,7 @@
     "selector-max-universal": 1,
     "selector-no-qualifying-type": true,
     "selector-no-vendor-prefix": true,
+    "selector-not-notation": "simple",
     "shorthand-property-no-redundant-values": true,
     "string-quotes": "double",
     "value-keyword-case": "lower",
