--- a/package.json
+++ b/package.json
@@ -109,5 +109,8 @@
     "dist/{css,js}/*.{css,js,map}",
     "js/*.js",
     "scss/**/*.scss"
-  ]
+  ],
+  "overrides": {
+    "webdriverio": "^7.19.5"
+  }
 }
