--- a/.github/workflows/dart-sass.yml
+++ b/.github/workflows/dart-sass.yml
@@ -10,7 +10,10 @@ on:
 env:
   DART_SASS: true
   FORCE_COLOR: 2
-  NODE: 16
+  NODE: 18
+
+permissions:
+  contents: read
 
 jobs:
   css:
@@ -19,6 +22,8 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
