--- a/package.json
+++ b/package.json
@@ -87,7 +87,6 @@
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.6",
     "markdown-it-attrs": "^4.1.6",
-    "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "popper.js": "^1.16.1",
     "postcss": "^8.4.21",
@@ -95,6 +94,7 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "prismjs": "^1.29.0",
     "qunit": "^2.19.4",
+    "sass": "^1.60.0",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
     "slugify": "^1.6.5",
