CSS: Check for non-parsed Sass variables when built with node-sass

--- a/.github/workflows/css.yml
+++ b/.github/workflows/css.yml
@@ -38,3 +38,15 @@ jobs:
 
       - name: CSS Dist
         run: grunt dist-css
+
+      # Check that there are no Sass variables (`$`)
+      - name: Check built CSS files
+        shell: bash
+        run: |
+          if [[ $(find dist-sass/css/ -name "*.css" | xargs grep -F "\$" | wc -l | bc) -eq 0 ]]; then
+            echo "Pass: No Sass variables found."
+            exit 0
+          else
+            echo "Error: Found Sass variables!"
+            exit 1
+          fi
