--- a/package.json
+++ b/package.json
@@ -52,22 +52,22 @@
   "devDependencies": {
     "@11ty/eleventy": "^1.0.2",
     "@lodder/grunt-postcss": "^3.1.1",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.15",
     "cross-env": "^7.0.3",
     "eleventy-plugin-nesting-toc": "^1.3.0",
-    "eslint": "^8.33.0",
-    "eslint-plugin-compat": "^4.1.1",
+    "eslint": "^8.47.0",
+    "eslint-plugin-compat": "^4.1.4",
     "eslint-plugin-figuration": "file:build/eslint-plugin-figuration",
     "eslint-plugin-node": "^11.1.0",
     "find-unused-sass-variables": "^5.0.0",
-    "glob": "^10.3.0",
+    "glob": "^10.3.3",
     "grunt": "^1.6.1",
     "grunt-contrib-clean": "^2.0.1",
     "grunt-contrib-concat": "^2.1.0",
     "grunt-contrib-cssmin": "^5.0.0",
     "grunt-contrib-uglify": "^5.2.2",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-eslint": "^24.2.0",
+    "grunt-eslint": "^24.3.0",
     "grunt-html": "^17.0.0",
     "grunt-rtlcss": "^2.0.2",
     "grunt-run": "^0.8.1",
@@ -75,34 +75,34 @@
     "grunt-stylelint": "^0.18.0",
     "ip": "^1.1.8",
     "jquery": "^3.7.0",
-    "karma": "^6.4.1",
-    "karma-chrome-launcher": "^3.1.1",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
     "karma-cli": "^2.0.0",
     "karma-detect-browsers": "^2.3.3",
     "karma-firefox-launcher": "^2.1.2",
     "karma-qunit": "^4.1.2",
     "karma-sauce-launcher": "^4.3.6",
-    "linkinator": "^5.0.1",
+    "linkinator": "^5.0.2",
     "load-grunt-tasks": "^5.1.0",
     "markdown-it": "^13.0.1",
-    "markdown-it-anchor": "^8.6.6",
+    "markdown-it-anchor": "^8.6.7",
     "markdown-it-attrs": "^4.1.6",
     "node-sass": "^9.0.0",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^6.0.6",
     "popper.js": "^1.16.1",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.28",
     "postcss-calc": "^9.0.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "prismjs": "^1.29.0",
     "qunit": "^2.19.4",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
-    "slugify": "^1.6.5",
+    "slugify": "^1.6.6",
     "stylelint": "^14.16.1",
     "stylelint-config-recommended-scss": "^8.0.0",
     "stylelint-config-standard": "^29.0.0",
-    "stylelint-order": "^6.0.2",
-    "stylelint-scss": "^4.3.0",
+    "stylelint-order": "^6.0.3",
+    "stylelint-scss": "^4.7.0",
     "time-grunt": "^2.0.0"
   },
   "files": [
