--- a/.github/workflows/css.yml
+++ b/.github/workflows/css.yml
@@ -43,10 +43,12 @@ jobs:
       - name: Check built CSS files
         shell: bash
         run: |
-          if [[ $(find dist/css/ -name "*.css" | xargs grep -F "\$" | wc -l | bc) -eq 0 ]]; then
+          SASS_VARS_FOUND=$(find "dist/css/" -type f -name "*.css" ! -name '*.min.css' -print0 | xargs -0 --no-run-if-empty grep -F "\$" || true)
+          if [[ -z "$SASS_VARS_FOUND" ]]; then
             echo "Pass: No Sass variables found."
             exit 0
           else
-            echo "Error: Found Sass variables!"
+            echo "Error: Found $(echo "$SASS_VARS_FOUND" | wc -l | bc) Sass variables:"
+            echo "$SASS_VARS_FOUND"
             exit 1
           fi
