--- a/package.json
+++ b/package.json
@@ -98,10 +98,10 @@
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
     "slugify": "^1.6.6",
-    "stylelint": "^14.16.1",
+    "stylelint": "^15.10.3",
+    "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-recommended-scss": "^8.0.0",
     "stylelint-config-standard": "^29.0.0",
-    "stylelint-order": "^6.0.3",
     "stylelint-scss": "^4.7.0",
     "time-grunt": "^2.0.0"
   },
