--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,10 +1,8 @@
 {
   "extends": [
     "stylelint-config-standard",
-    "stylelint-config-recommended-scss"
-  ],
-  "plugins": [
-    "stylelint-order"
+    "stylelint-config-recommended-scss",
+    "stylelint-stylistic/config"
   ],
   "rules": {
     'alpha-value-notation': null,
@@ -14,10 +12,8 @@
     "at-rule-empty-line-before": [null, {
       "except": ["first-nested"]
     }],
-    "at-rule-name-space-after": "always",
     "at-rule-no-unknown": null,
     "at-rule-no-vendor-prefix": true,
-    "at-rule-semicolon-space-before": "never",
     "block-closing-brace-empty-line-before": null,
     "block-closing-brace-newline-after": null,
     "block-opening-brace-space-before": null,
@@ -26,9 +22,6 @@
     'custom-property-pattern': null,
     "declaration-block-no-duplicate-properties": true,
     'declaration-block-no-redundant-longhand-properties': null,
-    "declaration-block-semicolon-newline-after": "always-multi-line",
-    "declaration-block-semicolon-newline-before": "never-multi-line",
-    "declaration-block-semicolon-space-after": "always-single-line",
     "declaration-empty-line-before": null,
     "declaration-no-important": true,
     "declaration-property-value-disallowed-list": {
@@ -47,20 +40,14 @@
     "function-url-no-scheme-relative": true,
     "function-url-quotes": "always",
     "import-notation": "string",
-    "indentation": 4,
     "length-zero-no-unit": true,
-    "max-empty-lines": 2,
     "max-line-length": null,
     "media-feature-name-no-unknown": [true, {
       "ignoreMediaFeatureNames": ["prefers-reduced-motion"]
     }],
     "media-feature-name-no-vendor-prefix": true,
-    "media-feature-parentheses-space-inside": "never",
-    "media-feature-range-operator-space-after": "always",
-    "media-feature-range-operator-space-before": "never",
     "no-descending-specificity": null,
     "no-duplicate-selectors": true,
-    "number-leading-zero": "never",
     "property-disallowed-list": [
       "border-radius",
       "border-top-left-radius",
@@ -98,15 +85,10 @@
     "scss/operator-no-unspaced": true,
     "selector-attribute-quotes": "always",
     "selector-class-pattern": "^[a-z][a-z0-9\\-]*[a-z0-9]$",
-    "selector-list-comma-newline-after": "always",
-    "selector-list-comma-newline-before": "never-multi-line",
-    "selector-list-comma-space-after": "always-single-line",
-    "selector-list-comma-space-before": "never-single-line",
     "selector-max-attribute": 2,
     "selector-max-class": 4,
     "selector-max-combinators": 4,
     "selector-max-compound-selectors": 4,
-    "selector-max-empty-lines": 1,
     "selector-max-id": 0,
     "selector-max-specificity": null,
     "selector-max-type": 2,
@@ -115,11 +97,25 @@
     "selector-no-vendor-prefix": true,
     "selector-not-notation": "simple",
     "shorthand-property-no-redundant-values": true,
-    "string-quotes": "double",
     "value-keyword-case": "lower",
-    "value-list-comma-newline-after": "never-multi-line",
-    "value-list-comma-newline-before": "never-multi-line",
-    "value-list-comma-space-after": "always",
-    "value-no-vendor-prefix": true
+    "value-no-vendor-prefix": true,
+
+    "stylistic/at-rule-name-space-after": "always",
+    "stylistic/at-rule-semicolon-space-before": "never",
+    "stylistic/block-closing-brace-empty-line-before": null,
+    "stylistic/block-closing-brace-newline-after": null,
+    "stylistic/block-opening-brace-space-before": null,
+    "stylistic/declaration-block-semicolon-newline-before": "never-multi-line",
+    "stylistic/indentation": 4,
+    "stylistic/max-empty-lines": 2,
+    "stylistic/max-line-length": null,
+    "stylistic/number-leading-zero": "never",
+    "stylistic/selector-list-comma-newline-before": "never-multi-line",
+    "stylistic/selector-list-comma-space-after": "always-single-line",
+    "stylistic/selector-list-comma-space-before": "never-single-line",
+    "stylistic/unicode-bom": "never",
+    "stylistic/value-list-comma-newline-after": "never-multi-line",
+    "stylistic/value-list-comma-newline-before": "never-multi-line",
+    "stylistic/value-list-comma-space-after": "always"
   }
 }
