--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,6 +2,7 @@
   "extends": [
     "stylelint-config-standard",
     "stylelint-config-recommended-scss",
+    "stylelint-config-recess-order",
     "stylelint-stylistic/config"
   ],
   "rules": {
