--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -79,6 +79,12 @@
         "scss/comment-no-empty": null,
         "scss/dimension-no-non-numeric-values": true,
         "scss/dollar-variable-colon-space-after": "at-least-one-space",
+        "scss/dollar-variable-default": [
+          true,
+          {
+            "ignore": "local"
+          }
+        ],
         "scss/dollar-variable-empty-line-before": null,
         "scss/double-slash-comment-empty-line-before": null,
         "scss/double-slash-comment-whitespace-inside": null
