table working - more mixins - started on forms
color contrast functions need some thought - loop issue if we try to use them in settings - may have to move contrast checks into components

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -31,6 +31,7 @@
       "lighten",
       "darken"
     ],
+    "media-query-no-invalid": true,
     "no-descending-specificity": null,
     "property-disallowed-list": [
       "border-radius",
