--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "find-unused-sass-variables": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.35",
+    "postcss-calc": "^9.0.1",
     "postcss-cli": "^11.0.0",
     "sass": "^1.70.0",
     "stylelint": "^16.2.1",
