--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clean-css-cli": "^5.6.3",
     "eslint": "^8.56.0",
     "find-unused-sass-variables": "^5.0.0",
+    "jquery": "^3.7.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.35",
     "postcss-calc": "^9.0.1",
