Testing passing palette variables

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -90,6 +90,14 @@
         "scss/double-slash-comment-empty-line-before": null,
         "scss/double-slash-comment-whitespace-inside": null
       }
+    },
+    {
+      "files": [
+        "scss/{functions,mixins,utilities}/*.scss"
+      ],
+      "rules": {
+        "scss/dollar-variable-default": null
+      }
     }
   ]
 }
