--- a/package.json
+++ b/package.json
@@ -26,6 +26,14 @@
     "css-lint-vars": "cross-env-shell \"fusv scss/ site/assets/$npm_package_config_versionShort/scss/\"",
     "css-minify": "cleancss -O1 --format breakWith=lf --with-rebase --source-map --source-map-inline-sources --output dist/css/ --batch --batch-suffix \".min\" \"dist/css/*.css\" \"!dist/css/*.min.css\"",
     "css-prefix": "postcss --config build/postcss.config.mjs --replace \"dist/css/*.css\" \"!dist/css/*.min.css\"",
+    "js": "npm-run-all js-compile js-minify",
+    "js-compile": "rollup --environment BUNDLE:false --config build/rollup.config.mjs --sourcemap",
+    "js-lint": "eslint --cache --cache-location .cache/.eslintcache --report-unused-disable-directives --ext .js js/",
+    "js-minify": "terser --compress passes=2 --mangle --comments \"/^!/\" --source-map \"content=dist/js/figuration.js.map,includeSources,url=figuration.min.js.map\" --output dist/js/figuration.min.js dist/js/figuration.js",
+    "js-test-karma": "karma start build/karma.conf.js",
+    "js-test-debug": "cross-env DEBUG=true npm run js-test-karma",
+    "js-test-cloud": "cross-env SAUCE=true npm run js-test-karma",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel css-lint js-lint",
     "watch": "npm-run-all --parallel watch-*",
     "watch-css-core": "nodemon --watch scss/ --ext scss --exec \"npm-run-all css-lint css-compile css-prefix\"",
     "watch-css-docs": "cross-env-shell \"nodemon --watch site/assets/$npm_package_config_versionShort/scss/ --ext scss --exec \\\"npm run css-lint\\\"\""
@@ -49,19 +57,33 @@
     "autoprefixer": "^10.4.17",
     "clean-css-cli": "^5.6.3",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
-    "find-unused-sass-variables": "^5.0.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-compat": "^4.2.0",
+    "eslint-plugin-figuration": "file:build/eslint-plugin-figuration",
+    "eslint-plugin-node": "^11.1.0",
+    "find-unused-sass-variables": "^6.0.0",
+    "ip": "^2.0.1",
     "jquery": "^3.7.1",
+    "karma": "^6.4.3",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-cli": "^2.0.0",
+    "karma-detect-browsers": "^2.3.3",
+    "karma-firefox-launcher": "^2.1.3",
+    "karma-qunit": "^4.2.0",
+    "karma-sauce-launcher": "^4.3.6",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.35",
-    "postcss-calc": "^9.0.1",
+    "postcss-calc": "^10.0.0",
     "postcss-cli": "^11.0.0",
+    "rollup": "^4.17.2",
+    "rollup-plugin-concat": "^1.0.3",
     "sass": "^1.70.0",
     "stylelint": "^16.2.1",
     "stylelint-config-recess-order": "^5.0.0",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-config-standard-scss": "^13.0.0",
-    "stylelint-scss": "^6.1.0"
+    "stylelint-scss": "^6.1.0",
+    "terser": "^5.31.0"
   },
   "files": [
     "dist/{css,js}/*.{css,js,map}",
