--- a/.github/workflows/css.yml
+++ b/.github/workflows/css.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   FORCE_COLOR: 2
-  NODE: 18
+  NODE: 20
 
 permissions:
   contents: read
@@ -33,22 +33,9 @@ jobs:
       - name: Install npm dependencies
         run: npm ci
 
-      - name: CSS Lint
-        run: grunt test-css
-
       - name: CSS Dist
-        run: grunt dist-css
+        run: npm run css
 
-      # Check that there are no Sass variables (`$`)
-      - name: Check built CSS files
-        shell: bash
-        run: |
-          SASS_VARS_FOUND=$(find "dist/css/" -type f -name "*.css" ! -name '*.min.css' -print0 | xargs -0 --no-run-if-empty grep -F "\$" || true)
-          if [[ -z "$SASS_VARS_FOUND" ]]; then
-            echo "Pass: No Sass variables found."
-            exit 0
-          else
-            echo "Error: Found $(echo "$SASS_VARS_FOUND" | wc -l | bc) Sass variables:"
-            echo "$SASS_VARS_FOUND"
-            exit 1
-          fi
+      - name: CSS Lint
+        run: npm run css-lint
+
