--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
   },
   "devDependencies": {
     "@stylistic/stylelint-config": "^1.0.1",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.19",
     "clean-css-cli": "^5.6.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
-    "eslint-plugin-compat": "^4.2.0",
+    "eslint-plugin-compat": "^5.0.0",
     "eslint-plugin-figuration": "file:build/eslint-plugin-figuration",
     "eslint-plugin-node": "^11.1.0",
     "find-unused-sass-variables": "^6.0.0",
@@ -71,19 +71,19 @@
     "karma-firefox-launcher": "^2.1.3",
     "karma-qunit": "^4.2.0",
     "karma-sauce-launcher": "^4.3.6",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.35",
+    "npm-run-all2": "^6.2.2",
+    "postcss": "^8.4.39",
     "postcss-calc": "^10.0.0",
     "postcss-cli": "^11.0.0",
-    "rollup": "^4.17.2",
+    "rollup": "^4.18.1",
     "rollup-plugin-concat": "^1.0.3",
-    "sass": "^1.70.0",
-    "stylelint": "^16.2.1",
-    "stylelint-config-recess-order": "^5.0.0",
-    "stylelint-config-standard": "^36.0.0",
-    "stylelint-config-standard-scss": "^13.0.0",
-    "stylelint-scss": "^6.1.0",
-    "terser": "^5.31.0"
+    "sass": "^1.77.7",
+    "stylelint": "^16.6.1",
+    "stylelint-config-recess-order": "^5.0.1",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-scss": "^6.4.1",
+    "terser": "^5.31.2"
   },
   "files": [
     "dist/{css,js}/*.{css,js,map}",
