Unit tests passing for now
Edge >=v120 has some issues with focus/focusin when running onm Sauce - test pass when run locally on Edge v126
Still need to loop back around for iOS

--- a/package.json
+++ b/package.json
@@ -89,5 +89,8 @@
     "dist/{css,js}/*.{css,js,map}",
     "js/*.js",
     "scss/**/*.scss"
-  ]
+  ],
+  "overrides": {
+    "webdriverio": "^7.19.5"
+  }
 }
